# app.py
@@ -1,7 +1,7 @@
 from apiflask import APIFlask, abort, HTTPTokenAuth
-from apiflask.fields import String, Integer, List, Nested, Field, Boolean, Float, DateTime, Dict
-from apiflask.validators import Length, OneOf
-from flask import render_template, jsonify, url_for, Flask
+from marshmallow.fields import Raw, String, Dict
+from marshmallow.validate import OneOf
+from flask import render_template, jsonify, url_for
 import json
 import os
 import schemas
@@ -27,13 +27,14 @@ app.security_schemes = {
     }
 }
 
-#endregion App setup
 
 worlds_dir = 'Worlds'
 if os.getenv('API_SECRET_KEY'):
     app.config['API_SECRET_KEY'] = os.getenv('API_SECRET_KEY')
     
 schema_class = {c: getattr(schemas, c) for c in dir(schemas) if not c.startswith('_') and not c.endswith('_')}
+
+#endregion App setup
 
 #region Utility Functions
 
@@ -98,6 +99,7 @@ def world(world_name):
     return render_template('world.html', world_name=world_name, world_data=world_data)
 
 #endregion Web Routes
+
 #region API Routes
 
 @app.get("/api/world/<string:world_name>")
@@ -129,6 +131,67 @@ def api_world(world_name):
         world_data = json.load(f)
 
     return jsonify(world_data)
+
+
+def patch_world(world, patch):
+    """
+    Patches a WorldSchema with a Partial WorldSchema or a Nested Schema.
+
+    Parameters:
+        world (dict): The original WorldSchema.
+        patch (dict): The patch to apply to the WorldSchema.
+
+    Returns:
+        dict: The updated WorldSchema.
+    """
+    if isinstance(patch, dict):
+        for key, value in patch.items():
+            if key in world:
+                if isinstance(value, dict):
+                    world[key] = patch_world(world[key], value)
+                else:
+                    world[key] = value
+    return world
+
+
+@app.patch("/api/world/<string:world_name>")
+@app.doc(operation_id="patch_api_world", responses={200: "Success", 404: "World not found"})
+# @app.input(schema_class["OneOfSchema"], location="json")
+@app.input(Dict(keys=String(title="Schema"), values=Raw(title="Value")), location="json")
+@app.output(schema_class["WorldSchema"])
+def patch_api_world(world_name, patch):
+    """
+    Patches the JSON data of a specific world by its name.
+
+    Parameters:
+        world_name (str): The name of the world to patch the data for.
+        patch (dict): The patch to apply to the world.
+
+    Returns:
+        dict: A JSON object containing the patched data of the specified world.
+
+    Raises:
+        404: If the specified world does not exist.
+    """
+    
+    print(world_name)
+    world_file = f"{world_name}.json"
+    world_path = os.path.join('Worlds', world_file)
+
+    if not os.path.exists(world_path): 
+        abort(404, description="World not found")
+        
+
+    with open(world_path, 'r') as f:
+        world_data = json.load(f)
+
+    world_data = patch_world(world_data, patch)
+
+    with open(world_path, 'w') as f:
+        json.dump(world_data, f, indent=4)
+
+    return jsonify(world_data)
+
 
 #endregion API Routes
 
